# clandestine-cli

./: .gitignore  README.md  pyproject.toml
docs/: outline.md
docs/modules/implants/: IMPLANTS.md
docs/vclusters/: DMZ-Cluster.md  Data-Cluster.md
src/: main.py
src/framework/: main.py
src/framework/application/: app.py
src/framework/application/cli/: command_handler.py  console_manager.py
src/framework/application/cli/commands/: help.py  search.py  use.py
src/framework/application/cli/strings/messages/: en_US.py  str_formatting.py
src/framework/application/configs/: base.py  env_variables.py
src/framework/application/database/: db.py  surrealdb_manager.py
src/framework/application/database/models/: hosts.py
src/framework/application/database/surrealQL/: new-connection-2024-07-23.surql
src/framework/application/logging/: logging_manager.py  surreal_logging.py
src/framework/application/modules/: example.c  example.py  module_manager.py
src/framework/application/modules/enrichment/: ENRICHMENT.md
src/framework/application/modules/implants/: IMPLANTS.md
src/framework/application/modules/listeners/: LISTENERS.md  listener_manager.py
src/framework/application/modules/listeners/https/https_listener/: README.md  pyproject.toml
src/framework/application/modules/listeners/https/https_listener/src/https_listener/: main.py
src/framework/application/modules/payloads/: payload_manager.py
src/framework/application/modules/recon/: recon_managers.py
src/framework/application/modules/social/: concept_index.py
tests/: surrealdb_config.py
(+27 files in other folders)
