[project]
name = "framework"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cam", email = "cammclain@skiff.com"},
]
dependencies = [
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.31",
    "advanced-alchemy>=0.17.3",
    "pydantic>=2.8.2",
    "surrealdb>=0.3.2",
    "jinja2>=3.1.4",
    "holehe>=1.61",
    "trio>=0.26.0",
    "httpx>=0.27.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
