[project]
name = "https_listener"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cam", email = "cammclain@skiff.com"},
]
dependencies = [
    "litestar>=2.9.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
